style: media query para escritorio

--- a/clima/week.html
+++ b/clima/week.html
@@ -1,109 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="week.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <header class="card-header temp-header">
-      <a href="index.html" class="icon-button" style="text-decoration: none">
-        <span class="material-symbols-outlined">arrow_back_ios</span>
-      </a>
-      <div class="location">
-        <div class="location-title">
-          <span class="material-symbols-outlined">calendar_month</span>
-          <span>7 days</span>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="week.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="card-header">
+    <a href="index.html" class="icon-button back-button">
+      <span class="material-symbols-outlined">arrow_back_ios</span>
+    </a>
+    <div class="location">
+      <div class="location-title">
+        <span class="material-symbols-outlined">calendar_month</span>
+        <span>7 days</span>
       </div>
-      <button class="icon-button">
-        <span class="material-symbols-outlined">more_vert</span>
-      </button>
-    </header>
-    <main class="temp-main">
-      <div class="weather-main-row">
-        <div class="weather-icon">⛅</div>
-        <div class="Weather-description">
-          <span class="weather-state">Tomorrow</span>
-          <span class="weather-temperature"
-            >20
-            <span class="weather-min">/17°</span>
-          </span>
-          <span class="weather-day">
-            <span class="weather-state-main">Rainy</span>
-            <span class="weather-state-sub"> - Cloudy</span>
-          </span>
-        </div>
+    </div>
+    <button class="icon-button">
+      <span class="material-symbols-outlined">more_vert</span>
+    </button>
+  </header>
+  <main>
+    <div class="weather-main-row">
+      <div class="weather-icon">⛅</div>
+      <div class="Weather-description">
+        <span class="weather-state">Tomorrow</span>
+        <span class="weather-temperature">20°
+          <span class="weather-min">/17°</span>
+        </span>
+        <span class="weather-day">
+          <span class="weather-state-main">Rainy</span>
+          <span class="weather-state-sub"> - Cloudy</span>
+        </span>
       </div>
-      <div class="Weather-info">
-        <div class="condition">
-          <span class="material-symbols-outlined">air</span>
-          <span class="condition-title">9 km/h</span>
-          <span class="condition-subtitle">Wind</span>
-        </div>
-        <div class="condition">
-          <span class="material-symbols-outlined">humidity_low</span>
-          <span class="condition-title">31 %</span>
-          <span class="condition-subtitle">Humidity</span>
-        </div>
-        <div class="condition">
-          <span class="material-symbols-outlined">rainy</span>
-          <span class="condition-title">93 %</span>
-          <span class="condition-subtitle">Chance of rain</span>
-        </div>
+    </div>
+    <div class="Weather-info">
+      <div class="condition">
+        <span class="material-symbols-outlined">air</span>
+        <span class="condition-title">9 km/h</span>
+        <span class="condition-subtitle">Wind</span>
       </div>
-    </main>
-    <footer class="temp-footer">
-      <div class="week-row">
-        <div class="day-col">
-          <span class="day-name">Mon</span>
-          <div class="weather-emoji">🌧️</div>
-          <span class="weather-desc">Rainy</span>
-          <span class="temp-max">20°<span class="temp-min">/14°</span></span>
-        </div>
-        <div class="day-col">
-          <span class="day-name">Tue</span>
-          <div class="weather-emoji">🌧️</div>
-          <span class="weather-desc">Rainy</span>
-          <span class="temp-max">18°<span class="temp-min">/13°</span></span>
-        </div>
-        <div class="day-col">
-          <span class="day-name">Wed</span>
-          <div class="weather-emoji">⛈️</div>
-          <span class="weather-desc">Storm</span>
-          <span class="temp-max">16°<span class="temp-min">/12°</span></span>
-        </div>
-        <div class="day-col">
-          <span class="day-name">Thu</span>
-          <div class="weather-emoji">🌤️</div>
-          <span class="weather-desc">Partly</span>
-          <span class="temp-max">17°<span class="temp-min">/11°</span></span>
-        </div>
-        <div class="day-col">
-          <span class="day-name">Fri</span>
-          <div class="weather-emoji">☀️</div>
-          <span class="weather-desc">Sunny</span>
-          <span class="temp-max">22°<span class="temp-min">/15°</span></span>
-        </div>
-        <div class="day-col">
-          <span class="day-name">Sat</span>
-          <div class="weather-emoji">🌤️</div>
-          <span class="weather-desc">Partly</span>
-          <span class="temp-max">21°<span class="temp-min">/16°</span></span>
-        </div>
-        <div class="day-col">
-          <span class="day-name">Sun</span>
-          <div class="weather-emoji">🌩️</div>
-          <span class="weather-desc">Thunder</span>
-          <span class="temp-max">19°<span class="temp-min">/13°</span></span>
-        </div>
+      <div class="condition">
+        <span class="material-symbols-outlined">humidity_low</span>
+        <span class="condition-title">31 %</span>
+        <span class="condition-subtitle">Humidity</span>
       </div>
-    </footer>
-  </body>
+      <div class="condition">
+        <span class="material-symbols-outlined">rainy</span>
+        <span class="condition-title">93 %</span>
+        <span class="condition-subtitle">Chance of rain</span>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="week-row">
+      <div class="day-col">
+        <span class="day-name">Mon</span>
+        <div class="weather-emoji">🌧️</div>
+        <span class="weather-desc">Rainy</span>
+        <span class="temp-max">20<span class="temp-min">/14</span></span>
+      </div>
+      <div class="day-col">
+        <span class="day-name">Tue</span>
+        <div class="weather-emoji">🌧️</div>
+        <span class="weather-desc">Rainy</span>
+        <span class="temp-max">18<span class="temp-min">/13</span></span>
+      </div>
+      <div class="day-col">
+        <span class="day-name">Wed</span>
+        <div class="weather-emoji">⛈️</div>
+        <span class="weather-desc">Storm</span>
+        <span class="temp-max">16<span class="temp-min">/12</span></span>
+      </div>
+      <div class="day-col">
+        <span class="day-name">Thu</span>
+        <div class="weather-emoji">🌤️</div>
+        <span class="weather-desc">Partly</span>
+        <span class="temp-max">17<span class="temp-min">/11</span></span>
+      </div>
+      <div class="day-col">
+        <span class="day-name">Fri</span>
+        <div class="weather-emoji">☀️</div>
+        <span class="weather-desc">Sunny</span>
+        <span class="temp-max">22<span class="temp-min">/15</span></span>
+      </div>
+      <div class="day-col">
+        <span class="day-name">Sat</span>
+        <div class="weather-emoji">🌤️</div>
+        <span class="weather-desc">Partly</span>
+        <span class="temp-max">21<span class="temp-min">/16</span></span>
+      </div>
+      <div class="day-col">
+        <span class="day-name">Sun</span>
+        <div class="weather-emoji">🌩️</div>
+        <span class="weather-desc">Thunder</span>
+        <span class="temp-max">19<span class="temp-min">/13</span></span>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
