--- a/clima/index.html
+++ b/clima/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
+
 <body>
-    <header class="card-header temp-header">
+    <header class="card-header">
         <button class="icon-button">
             <span class="material-symbols-outlined">menu</span>
         </button>
@@ -26,7 +28,7 @@
             <span class="material-symbols-outlined">more_vert</span>
         </button>
     </header>
-    <main class="temp-main">
+    <main>
         <div class="weather-icon">⛈️</div>
         <div class="Weather-description">
             <span class="weather-temperature">21°</span>
@@ -51,7 +53,7 @@
             </div>
         </div>
     </main>
-    <footer class="temp-footer">
+    <footer>
         <div class="today">
             <div class="today-heading">
                 <span>Today</span>
@@ -85,4 +87,5 @@
         </div>
     </footer>
 </body>
+
 </html>
