feat: correciones semanticas del html

--- a/agency/index.html
+++ b/agency/index.html
@@ -31,7 +31,7 @@
         </nav>
       </header>
       <main>
-        <figure class="main-figure main-figure-left">
+        <figure>
           <img
             src="https://blush.design/api/download?shareUri=miMlQ3JQ3XK8Vv_6&c=Hair_0%7E3164cf_Rainbow_0%7Eff89d4_Skin_0%7Efeb1cd&w=800&h=800&fm=png"
             alt="Imagen decorativa"
@@ -83,7 +83,7 @@
             </div>
           </div>
         </div>
-        <figure class="main-figure main-figure-right">
+        <figure>
           <img
             src="https://blush.design/api/download?shareUri=U_xUHmXuAw7khHjC&c=Hair_0%7Ed5e1d5_Rainbow_0%7Eff89d4_Skin_0%7Eef9e89&w=800&h=800&fm=png"
             alt="Imagen decorativa derecha"
