feat: arregro del boton dots-icon

--- a/New-york-times/index.html
+++ b/New-york-times/index.html
@@ -55,10 +55,10 @@
             <li><a href="#">Food</a></li>
             <li><a href="#">Travel</a></li>
             <li><a href="#">Magazine</a></li>
-            <li class="dots-icon">
-              <span class="material-symbols-outlined"> more_horiz </span>
-            </li>
           </ul>
+          <div class="dots-icon">
+            <span class="material-symbols-outlined"> more_horiz </span>
+          </div>
         </nav>
       </div>
     </header>
