--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,94 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="header-container">
-        <span class="icon-left">
-          <img
-            src="https://img.icons8.com/ios-filled/50/ffffff/settings.png"
-            alt="Configuración"
-            width="28"
-            height="28"
-          />
-        </span>
-        <nav>
-          <a href="#">Home</a>
-          <a href="#">Products</a>
-          <a href="#">Showcase</a>
-          <a href="#">Discover <span class="badge">new</span></a>
-        </nav>
-        <button id="sign-up" class="primary">Sign Up</button>
-        <span class="icon-right">
-          <img
-            src="https://img.icons8.com/ios-filled/50/ffffff/menu--v1.png"
-            alt="Menú"
-            width="28"
-            height="28"
-          />
-        </span>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing Page</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header-container">
+      <span class="icon-left">
+        <span class="material-icons settings" aria-label="Configuración">settings</span>
+      </span>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Products</a>
+        <a href="#">Showcase</a>
+        <a href="#">Discover <mark class="badge">new</mark></a>
+      </nav>
+      <button id="sign-up" class="primary" aria-label="Registrarse">
+        Sign Up
+      </button>
+      <span class="icon-right">
+        <span class="material-icons" aria-label="Menú">menu</span>
+      </span>
+    </div>
+  </header>
+  <main>
+    <section class="content">
+      <div class="content-group-one">
+        <h2 class="intro-text">INTRODUCING THE LATEST INNOVATION</h2>
+        <h1>
+          Create all your product mockups <strong>easily</strong>
+          <span class="plus-icon">+</span>
+        </h1>
       </div>
-    </header>
-    <main>
-      <div class="content">
-        <div class="content-group-one">
-          <p class="intro-text">INTRODUCING THE LATEST INNOVATION</p>
-          <h1>
-            Create all your product mockups <strong>easily</strong>
-            <span class="plus-icon">+</span>
-          </h1>
-        </div>
-        <div class="content-group-two">
-          <p class="description">
-            Fore is a service for creating all your mockup needs. You just drag
-            and drop and the mockup is immediately ready to use.
-          </p>
-          <div class="buttons">
-            <button class="one">
-              <a href="#">Try for free</a>
-            </button>
-            <button class="two">
-              <a href="#">Get app</a>
-            </button>
-          </div>
+      <div class="content-group-two">
+        <p class="description">
+          Fore is a service for creating all your mockup needs. You just drag
+          and drop and the mockup is immediately ready to use.
+        </p>
+        <div class="buttons">
+          <a href="#" class="button one" aria-label="Probar gratis">Try for free</a>
+          <a href="#" class="button two" aria-label="Descargar aplicación">Get app</a>
         </div>
       </div>
-      <div class="image-container">
-        <img src="responsive-image.webp" alt="Mockup editor" />
+    </section>
+  </main>
+  <div class="image-container">
+    <img src="responsive-image.webp" alt="Editor de mockups mostrando diferentes dispositivos" />
+  </div>
+  <footer>
+    <div class="brands">
+      <p>Other brands have trusted our service</p>
+      <div class="logos" role="list" aria-label="Logos de marcas que confían en nuestro servicio">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Dropbox_Icon.svg" alt="Dropbox" />
+        <img src="https://www.svgrepo.com/show/360404/fiverr.svg" alt="Fiverr" />
+        <img src="https://www.svgrepo.com/show/342245/squarespace.svg" alt="Squarespace" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Bolt_logo.svg" alt="Bolt" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft" />
       </div>
-    </main>
-    <footer>
-      <div class="brands">
-        <p>Other brands have trusted our service</p>
-        <div class="logos">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/7/78/Dropbox_Icon.svg"
-            alt="Dropbox"
-          />
-          <img
-            src="https://www.svgrepo.com/show/360404/fiverr.svg"
-            alt="Fiverr"
-          />
-          <img
-            src="https://www.svgrepo.com/show/342245/squarespace.svg"
-            alt="Squarespace"
-          />
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/7/74/Bolt_logo.svg"
-            alt="Bolt"
-          />
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg"
-            alt="Microsoft"
-          />
-        </div>
-      </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
