--- a/Stella Studio/index.html
+++ b/Stella Studio/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <header class="header-grid">
+    <header>
       <div class="header-container">
         <img src="./images/logo.webp" alt="Stella Studio Logo" />
         <nav class="main-nav">
