--- a/clima/week.html
+++ b/clima/week.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>week</title>
+  <title>7-Day Forecast</title>
   <link rel="stylesheet" href="week.css" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 
 <body>
-  <header class="card-header">
+  <header>
     <a href="index.html" class="icon-button back-button">
-      <span class="material-symbols-outlined">arrow_back_ios</span>
+      <span class="material-symbols-outlined back-icon">arrow_back_ios</span>
     </a>
     <div class="location">
       <div class="location-title">
@@ -25,11 +25,13 @@
     </button>
   </header>
   <main>
-    <div class="weather-main-row">
-      <div class="weather-icon">⛅</div>
-      <div class="Weather-description">
+    <section class="weather-main-row">
+      <div class="weather-icon">
+        <span role="img" aria-label="Parcialmente nublado">⛅</span>
+      </div>
+      <div class="weather-description">
         <span class="weather-state">Tomorrow</span>
-        <span class="weather-temperature">20°
+        <span class="weather-temperature">20
           <span class="weather-min">/17°</span>
         </span>
         <span class="weather-day">
@@ -37,70 +39,70 @@
           <span class="weather-state-sub"> - Cloudy</span>
         </span>
       </div>
-    </div>
-    <div class="Weather-info">
+    </section>
+    <section class="weather-info">
       <div class="condition">
-        <span class="material-symbols-outlined">air</span>
+        <span class="material-symbols-outlined" aria-hidden="true">air</span>
         <span class="condition-title">9 km/h</span>
         <span class="condition-subtitle">Wind</span>
       </div>
       <div class="condition">
-        <span class="material-symbols-outlined">humidity_low</span>
+        <span class="material-symbols-outlined" aria-hidden="true">humidity_low</span>
         <span class="condition-title">31 %</span>
         <span class="condition-subtitle">Humidity</span>
       </div>
       <div class="condition">
-        <span class="material-symbols-outlined">rainy</span>
+        <span class="material-symbols-outlined" aria-hidden="true">rainy</span>
         <span class="condition-title">93 %</span>
         <span class="condition-subtitle">Chance of rain</span>
       </div>
-    </div>
+    </section>
   </main>
   <footer>
-    <div class="week-row">
-      <div class="day-col">
+    <section class="week-column">
+      <div class="day-row">
         <span class="day-name">Mon</span>
-        <div class="weather-emoji">🌧️</div>
+        <span class="weather-emoji"><span role="img" aria-label="Lluvia">🌧️</span></span>
         <span class="weather-desc">Rainy</span>
-        <span class="temp-max">20<span class="temp-min">/14</span></span>
+        <span class="temp-max">+20°<span class="temp-min">/14</span></span>
       </div>
-      <div class="day-col">
+      <div class="day-row">
         <span class="day-name">Tue</span>
-        <div class="weather-emoji">🌧️</div>
+        <span class="weather-emoji"><span role="img" aria-label="Lluvia">🌧️</span></span>
         <span class="weather-desc">Rainy</span>
-        <span class="temp-max">18<span class="temp-min">/13</span></span>
+        <span class="temp-max">+22°<span class="temp-min">/13</span></span>
       </div>
-      <div class="day-col">
+      <div class="day-row">
         <span class="day-name">Wed</span>
-        <div class="weather-emoji">⛈️</div>
+        <span class="weather-emoji"><span role="img" aria-label="Tormenta">⛈️</span></span>
         <span class="weather-desc">Storm</span>
-        <span class="temp-max">16<span class="temp-min">/12</span></span>
+        <span class="temp-max">+19°<span class="temp-min">/12</span></span>
       </div>
-      <div class="day-col">
+      <div class="day-row">
         <span class="day-name">Thu</span>
-        <div class="weather-emoji">🌤️</div>
-        <span class="weather-desc">Partly</span>
-        <span class="temp-max">17<span class="temp-min">/11</span></span>
+        <span class="weather-emoji"><span role="img" aria-label="Parcialmente soleado">🌤️</span></span>
+        <span class="weather-desc">Slow</span>
+        <span class="temp-max">+18°<span class="temp-min">/11</span></span>
       </div>
-      <div class="day-col">
+      <div class="day-row">
         <span class="day-name">Fri</span>
-        <div class="weather-emoji">☀️</div>
-        <span class="weather-desc">Sunny</span>
-        <span class="temp-max">22<span class="temp-min">/15</span></span>
+        <span class="weather-emoji"><span role="img" aria-label="Tormenta eléctrica">🌩️</span></span>
+        <span class="weather-desc">Storm</span>
+        <span class="temp-max">+23°<span class="temp-min">/15</span></span>
       </div>
-      <div class="day-col">
+      <div class="day-row">
         <span class="day-name">Sat</span>
-        <div class="weather-emoji">🌤️</div>
-        <span class="weather-desc">Partly</span>
-        <span class="temp-max">21<span class="temp-min">/16</span></span>
+        <span class="weather-emoji"><span role="img" aria-label="Parcialmente soleado">🌤️</span></span>
+        <span class="weather-desc">Rainy</span>
+        <span class="temp-max">+25°<span class="temp-min">/16</span></span>
       </div>
-      <div class="day-col">
+      <div class="day-row">
         <span class="day-name">Sun</span>
-        <div class="weather-emoji">🌩️</div>
-        <span class="weather-desc">Thunder</span>
-        <span class="temp-max">19<span class="temp-min">/13</span></span>
+        <span class="weather-emoji"><span role="img" aria-label="Tormenta eléctrica">🌩️</span></span>
+        <span class="weather-desc">Storm</span>
+        <span class="temp-max">+21°<span class="temp-min">/13</span></span>
       </div>
-    </div>
+    </section>
   </footer>
 </body>
 
