feat: correcion del display del footer

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="header-container">
         <span class="icon-left">
-          <span class="material-icons settings" aria-label="Configuración"
+          <span class="material-icons settings" aria-label="Settings"
             >settings</span
           >
         </span>
@@ -29,7 +29,7 @@
           Sign Up
         </button>
         <span class="icon-right">
-          <span class="material-icons" aria-label="Menú">menu</span>
+          <span class="material-icons" aria-label="Menu">menu</span>
         </span>
       </div>
     </header>
@@ -48,13 +48,11 @@
             and drop and the mockup is immediately ready to use.
           </p>
           <div class="buttons">
-            <a href="#" class="button one" aria-label="Probar gratis">
+            <a href="#" class="button one" aria-label="Try for free">
               Try for free
               <span class="material-icons">arrow_outward</span>
             </a>
-            <a href="#" class="button two" aria-label="Descargar aplicación"
-              >Get app</a
-            >
+            <a href="#" class="button two" aria-label="Download app">Get app</a>
           </div>
         </div>
       </section>
@@ -62,7 +60,7 @@
     <div class="image-container">
       <img
         src="images/responsive-image.webp"
-        alt="Editor de mockups mostrando diferentes dispositivos"
+        alt="Mockup editor showing different devices"
       />
     </div>
     <footer>
@@ -71,7 +69,7 @@
         <div
           class="logos"
           role="list"
-          aria-label="Logos de marcas que confían en nuestro servicio"
+          aria-label="Brand logos that trust our service"
         >
           <div class="logo-container">
             <img src="images/Bolt_logo.webp" alt="Bolt" />
