feat: bloque para header y main

--- a/clima/index.html
+++ b/clima/index.html
@@ -3,55 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weater</title>
+  <title>Weather</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
-  <header>
-    <span class="material-symbols-outlined icon-interactive" aria-label="Abrir menú" role="button"
-      tabindex="0">menu</span>
-    <div class="location">
-      <div class="location-title">
-        <span class="material-symbols-outlined"> location_on </span>
-        <span>Minsk</span>
+  <div class="top-section">
+    <header>
+      <span class="material-symbols-outlined icon-interactive" aria-label="Abrir menú" role="button"
+        tabindex="0">menu</span>
+      <div class="location">
+        <div class="location-title">
+          <span class="material-symbols-outlined"> location_on </span>
+          <span>Minsk</span>
+        </div>
+        <div class="updating">
+          <span class="material-symbols-outlined updating-dot">fiber_manual_record</span>
+          <span>Updating</span>
+        </div>
       </div>
-      <div class="updating">
-        <span class="material-symbols-outlined updating-dot">fiber_manual_record</span>
-        <span>Updating</span>
-      </div>
-    </div>
-    <span class="material-symbols-outlined icon-interactive" aria-label="Más opciones" role="button"
-      tabindex="0">more_vert</span>
-  </header>
-  <main>
-    <section class="weather-current" role="main">
-      <h1 class="visually-hidden">Información meteorológica actual</h1>
-      <div class="weather-icon">⛈️</div>
-      <div class="weather-description">
-        <span class="weather-temperature">21<span class="degree-symbol">°</span></span>
-        <span class="weather-state">Thunderstorm</span>
-        <span class="weather-day">Monday, 17 May</span>
-      </div>
-    </section>
-    <section class="weather-info" aria-label="Condiciones meteorológicas detalladas">
-      <div class="condition">
-        <span class="material-symbols-outlined" aria-hidden="true">air</span>
-        <span class="condition-title">13 km/h</span>
-        <span class="condition-subtitle">Wind</span>
-      </div>
-      <div class="condition">
-        <span class="material-symbols-outlined" aria-hidden="true">humidity_low</span>
-        <span class="condition-title">24 %</span>
-        <span class="condition-subtitle">Humidity</span>
-      </div>
-      <div class="condition">
-        <span class="material-symbols-outlined" aria-hidden="true">rainy</span>
-        <span class="condition-title">87 %</span>
-        <span class="condition-subtitle">Chance of rain</span>
-      </div>
-    </section>
-  </main>
+      <span class="material-symbols-outlined icon-interactive" aria-label="Más opciones" role="button"
+        tabindex="0">more_vert</span>
+    </header>
+    <main>
+      <section class="weather-current" role="main">
+        <h1 class="visually-hidden">Información meteorológica actual</h1>
+        <div class="weather-icon">⛈️</div>
+        <div class="weather-description">
+          <span class="weather-temperature">21<span class="degree-symbol">°</span></span>
+          <span class="weather-state">Thunderstorm</span>
+          <span class="weather-day">Monday, 17 May</span>
+        </div>
+      </section>
+      <section class="weather-info" aria-label="Condiciones meteorológicas detalladas">
+        <div class="condition">
+          <span class="material-symbols-outlined" aria-hidden="true">air</span>
+          <span class="condition-title">13 km/h</span>
+          <span class="condition-subtitle">Wind</span>
+        </div>
+        <div class="condition">
+          <span class="material-symbols-outlined" aria-hidden="true">humidity_low</span>
+          <span class="condition-title">24 %</span>
+          <span class="condition-subtitle">Humidity</span>
+        </div>
+        <div class="condition">
+          <span class="material-symbols-outlined" aria-hidden="true">rainy</span>
+          <span class="condition-title">87 %</span>
+          <span class="condition-subtitle">Chance of rain</span>
+        </div>
+      </section>
+    </main>
+  </div>
   <footer>
     <section class="today" aria-label="Pronóstico por horas">
       <div class="today-heading">
