--- a/Stella Studio/index.html
+++ b/Stella Studio/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../ejercicio.css">
   </head>
   <body>
     <header>
@@ -30,12 +31,8 @@
         <h1>Enabling brands to flow with change in order to grow &#128640;</h1>
         <div class="row">
           <div class="buttons">
-            <button class="btn btn-primary">
-              <a href="#">Get Started</a>
-            </button>
-            <button class="btn btn-secondary">
-              <a href="#">Get Quote</a>
-            </button>
+            <a href="#" class="btn btn-primary">Get Started</a>
+            <a href="#" class="btn btn-secondary">Get Quote</a>
           </div>
           <div class="references">
             <a href="#">/ web design</a>
@@ -45,38 +42,40 @@
         </div>
       </section>
       <section class="black-section">
-        <div class="info">
+        <div class="grid-container">
+          <div class="first black-space"></div>
+          <div class="second white-space"></div>
           <div class="profile">
-            <div class="profile-content">
+            <div class="profile-container">
               <img
                 src="https://randomuser.me/api/portraits/men/32.jpg"
                 alt="Profile image"
                 class="profile-img"
               />
-              <div class="profile-details">
-                <p class="profile-name">Lorenzo Garzón</p>
-                <p class="profile-role">Founder</p>
+              <div class="profile-info">
+                <p class="profile-title">Leonardo Garzón</p>
+                <p class="profile-subtitle">Founder</p>
               </div>
             </div>
-            <div class="image-content">
-              <img src="./images/escaleras.webp" alt="Escaleras" />
-            </div>
+            <img src="./images/escaleras.webp" alt="escaleras" />
           </div>
-          <div class="info-content">
+          <div class="info-container">
             <h2>We propel results-driven growth</h2>
             <p>
               At the start of every project, we customise a detailed project
               plan together with you to set expectations, ensure alignment, and
-              define key milestones and deliverables. Experience tells us the
-              best solutions are the ones co-ideated with clients. We
-              incorporate your ideas with our broad level of expertise to create
-              memorable experiences for your brands & products.
+              define key milestones and deliverables. Experience tell is the
+              best solutions are the one co-ideated with clients. We incorporate
+              your ideas with our broad level of expertise to create memorable
+              experiences for your brands & products.
             </p>
-            <button class="btn btn-details">View Details</button>
+            <button class="btn-details">View Details</button>
           </div>
+          <div class="sixth white-space"></div>
+          <div class="seventh black-space"></div>
+          <div class="eighth white-space"></div>
         </div>
       </section>
     </main>
-    
   </body>
 </html>
