--- a/clima/week.html
+++ b/clima/week.html
@@ -13,7 +13,7 @@
   <body>
     <div class="top-section">
       <header>
-        <a href="index.html" class="icon-button back-button">
+        <a class="icon-button back-button">
           <span class="material-symbols-outlined back-icon"
             >arrow_back_ios</span
           >
